<resources>
    <string name="app_name">Fit4u</string>
    <string name="str_next">Next</string>
    <string name="str_questionnaire">Questionnaire</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="language">Language:</string>
    <string name="trainer_name">Juan López</string>
    <string name="trainer_rating">Trainer rating: 3/5</string>
    <string name="input">INPUT NEW IMPROVEMENT</string>
    <string name="notificate">Notificate me on: </string>
    <string name="user_details">Check user Details</string>
    <string name="trainer_list_header">Here you\'ll be able to see all the user\'s information</string>
    <string name="user_progress">Check User Progress</string>
    <string name="routines_management">User Routines Management</string>
    <string name="Pick">Pick Date</string>
    <string name="contact">Contact</string>
    <string name="MainMenu">MAIN MENU</string>
    <string name="Share">Share our Application</string>
    <string name="type">Type here</string>
    <string name="ictproject">ICT Project</string>
    <string name="register">Register</string>
    <string name="contactwithus">Contact with our team :)</string>
    <string name="youremail">Your E-mail</string>
    <string name="whatyouwant">What do you want to tell us?\n You will receive an email in a few days with the response.</string>
    <string name="title_activity_settings">Settings</string>
    <string name="sendemail">SEND EMAIL</string>
    <string name="welcomeuser">WELCOME, USERNAME!</string>
    <string name="ttraining">Today\'s Training:</string>
    <string name="finaltext"> Good luck with your training.\n \n And remember...</string>
    <string name="muscGroup">Muscular Group</string>
    <string name="filter2">Filter 2</string>
    <string name="titleActivitySizeTracker">Size Tracker</string>
    <string name="titleActivityMainPage">Main Page</string>
    <string name="titleActivityUserInfo">User Information</string>
    <string name="titleActivityRoutines">Routines</string>
    <string name="titleActivityRoutineDetail">Routine Detail</string>
    <string name="titleActivityContactWithUs">Contact with us</string>
    <string name="kclBurnt">Avg KCl Burnt:                   5Kcl</string>
    <string name="btl">BACK TO LIST</string>
    <string-array name="languages">
        <item>Spanish</item>
        <item>Catalan</item>
        <item>English</item>
    </string-array>
    <string name="contractCoachTerms" translatable="false">
        Welcome dear user.\n\nThis page it\'s made to contract a personal trainer who fits the specific type of training that you want to do.\n\nOur coach selector system will decide a group of coachs that can be better for you and select one of this group.\n\nThe cost is just 20€, way cheaper than a gym\'s one.\n\n You will even be able to contact directly with your coach to ask for diets personally or doubts about you training.
    </string>
    <string name="becomePremium" translatable="false">
        Welcome dear user.\n\nBy becoming premium you\'ll be able to have access to different features. \n\nYou\'ll be able to select more advanced routines, you\'ll be able to use the size tracker (which allows you to track the size of your muscles, seeing if they\'ve increased or decreased, depending on your objectives), and the most important thing, you\'ll be helping us with the maintenance costs. \n\nThe cost is only 10€.
    </string>
    <string name="noResultsMessage">NO RESULTS WHERE FOUND</string>
    <string name="consultRoutinesDuration">Duration</string>
    <string name="consultRoutinesFilterBy">Filter by:</string>
    <string name="consultRoutinesListTitle">Those are the able routines:</string>
    <string name="workoutDurationLabel">Duration: </string>
    <string name="workoutNameLabel">Name: </string>
    <string name="dailiesListTitle">Daily workouts: </string>
    <string name="assignButtonLabel">Pick it!</string>
    <string name="back" translatable="false">back</string>
    <string name="contract" translatable="false">Contract</string>
    <string name="experience" translatable="false">Experience</string>
    <string name="outAppCV" translatable="false">Out App CV</string>
    <string name="users" translatable="false">Users</string>
    <string name="trainingType" translatable="false">Training Type</string>
    <string name="bodyType" translatable="false">Body Type</string>
    <string name="routineName" translatable="false">Routine Name</string>
    <string name="routineType" translatable="false">Routine Type</string>
    <string name="description" translatable="false">Description</string>
    <string name="additionalTips" translatable="false">Additional Tips</string>
    <string name="muscularGroup" translatable="false">Muscular Group</string>
    <string name="series" translatable="false">Series</string>
    <string name="repetitions" translatable="false">Repetitions</string>
    <string name="addNewExercise" translatable="false">Add New Exercise</string>
    <string name="save" translatable="false">Save</string>
    <string name="currently" translatable="false">Currently</string>
    <string name="otherRoutines" translatable="false">Other Routines</string>
    <string name="userIsPremium">You\'re not premium yet!</string>
    <string name="username" translatable="false">Username: </string>
    <string name="password" translatable="false">Password</string>
    <string name="email" translatable="false">Email: </string>
    <string name="role" translatable="false">Role:</string>
    <string name="speciality" translatable="false">Speciality:</string>
    <string name="spec" translatable="false">Speciality</string>
    <string name="height" translatable="false">Height: </string>
    <string name="weight" translatable="false">Weight: </string>
    <string name="body_type" translatable="false">Body type: </string>
    <string name="title_activity_testing" translatable="false">testing</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="title_activity_main2" translatable="false">Main2Activity</string>
    <string name="consu_rout" translatable="false">Consult routines</string>
    <string name="size_tracker" translatable="false">Size tracker</string>
    <string name="progress_tracker" translatable="false">Progress Tracker</string>
    <string name="coach" translatable="false">Coach</string>
    <string name="become_premium" translatable="false">Become Premium</string>
    <string name="input_training" translatable="false">Input training</string>
    <string name="routine_picker" translatable="false">Choose todays exercice: </string>
    <string name="notifications" translatable="false">Notifications</string>
    <string name="trainer_header">Here you can see all your assigned users</string>
    <string name="coachInfo" translatable="false">Coach Information</string>
    <string name="contractCoach" translatable="false">Contract Coach</string>
    <string name="profile" translatable="false">Profile</string>
    <string name="asg_users" translatable="false">Asigned users</string>
    <string name="main_page" translatable="false">Main Page</string>
    <string name="user_routines" translatable="false">User Routines</string>
    <string name="addNewRoutine" translatable="false">Create New Routine</string>
    <string name="inputData" translatable="false">INPUT MISSING DATA</string>
    <string name="invalidEmail" translatable="false">Invalid email.</string>
    <string name="shortPassword" translatable="false">Password too short.</string>
    <string name="login" translatable="false">Log in</string>
    <string name="name" translatable="false">Name </string>
    <string name="address" translatable="false">Address</string>
    <string name="telNum" translatable="false">Phone number: </string>
    <string name="confChanges" translatable="false">Confirm Changes</string>
    <string name="trainerProfile" translatable="false">Name: Juan López Rating : 3/5 E-mail: juanlopez@gmail.com Phone number: 600592832 Education: Nutrition and Health at University of Abeerden</string>
    <string name="needSmt" translatable="false">We still need some information. After it, we will proceed with a Questionnaire to set your body type</string>
    <string name="subject" translatable="false">Subject</string>
    <string name="title_activity_coach_list" translatable="false">CoachList</string>
    <string name="title_activity_trainer_user_list" translatable="false">TrainerUserList</string>
    <string name="noUsersAssignedMessage">YOU HAVE NO USERS ASSIGNED YET!</string>
    <string name="userDetailsAssignRoutineBut">ASSIGN CUSTOM ROUTINE</string>
    <string name="continueLabel">CONTINUE</string>
    <string name="newRoutineBodyTypeLabel">User body type: </string>
    <string name="newRoutineNameLabel">New routine name: </string>
    <string name="emptyFields">There are empty fields!</string>
    <string name="createDailiesTitle">Here you may add the exercises that will compose each daily workout from your routine:</string>
    <string name="day1">MONDAY</string>
    <string name="day2">TUESDAY</string>
    <string name="day3">WEDNESDAY</string>
    <string name="day4">THURSDAY</string>
    <string name="day5">FRIDAY</string>
    <string name="done">Done!</string>
    <string name="add">ADD EXERCISES</string>
    <string name="filterByMuscularGroup">Filter by Muscular Group</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="days">days</string>
    <string name="logout">Log out</string>
    <string name="area">Area</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="quadriceps">Quadriceps</string>
    <string name="abduptors">Abduptors</string>
    <string name="swimming">Swimming</string>
    <string name="type1">Type 1</string>
    <string name="thriatlon">Thriatlon</string>
    <string name="type2">Type 2</string>
    <string name="pchallenge">Personal challenge</string>
    <string name="type3">Type 3</string>
    <string name="exercise1">Exercise 1</string>
    <string name="leg">Leg</string>
    <string name="exercise_duration">Exercise duration</string>
    <string name="exercise_name">Exercise name</string>
    <string name="date_picked">Date picked</string>
    <string name="yearsuser1">25 years old</string>
    <string name="endomorph">Endomorph</string>
    <string name="trainer_speciality">Trainer speciality: </string>
    <string name="trainer_assigned">Number of assigned users to him: </string>
    <string name="rest_day">Today is a rest day! </string>
    <string name="not_add">You can not add any training if today is a rest day. </string>
    <string name="client_detail">Client detail </string>





</resources>