<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/cons_rout_it"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/consu_rout" />
        <item
            android:id="@+id/size_tr_it"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/size_tracker" />
        <item
            android:id="@+id/prog_tr_it"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/progress_tracker" />
        <item
            android:id="@+id/coach_it"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/coach" />
        <item
            android:id="@+id/settings_it"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/title_activity_settings" />
        <item
            android:id="@+id/bec_premium_it"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/become_premium" />
    </group>

</menu>
