<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:paddingTop="@dimen/layouts_top_margin"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/createDailiesTitle"
            android:textSize="20sp"
            android:padding="8dp"
            android:layout_marginBottom="40dp"
            android:id="@+id/createDailiesTitle"
            android:gravity="center"/>

        <Button
            android:id="@+id/Daily1But"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/day1"/>
        <Button
            android:id="@+id/Daily2But"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/day2"/>
        <Button
            android:id="@+id/Daily3But"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/day3"/>
        <Button
            android:id="@+id/Daily4But"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/day4"/>

            <Button
                android:id="@+id/Daily5But"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/day5"/>

        <Button
            android:id="@+id/doneButtonLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done"/>

    </LinearLayout>
</LinearLayout>
