<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="@dimen/layouts_top_margin"
    android:paddingRight="20dp"
    android:paddingBottom="20dp">

    <Button
        android:id="@+id/sendemailButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/contact" />

    <Button
        android:id="@+id/buttonShare"
        android:layout_width="330dp"
        android:layout_height="64dp"

        android:layout_marginTop="75dp"
        android:text="@string/user_details" />

    <Button
        android:id="@+id/buttonShare2"
        android:layout_width="330dp"
        android:layout_height="64dp"
        android:layout_marginTop="48dp"
        android:text="@string/user_progress"
   />

    <Button
        android:id="@+id/buttonShare3"
        android:layout_width="330dp"
        android:layout_height="64dp"
        android:layout_marginTop="48dp"
        android:text="@string/routines_management"

 />

</LinearLayout>

