<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="40dp">
    <TextView
        android:id="@+id/routineDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercise_duration"/>
    <TextView
        android:id="@+id/routineDurationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/routineDuration"
        android:text="@string/days"/>
    <TextView
        android:id="@+id/routineName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/routineDuration"
        android:text="@string/exercise_name" />

    <ImageView
        android:layout_width="63dp"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="0dp"
        android:background="@drawable/routine_icon" />
</RelativeLayout>